--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Liocha/php-project-lvl4",
+    "name": "liocha/php-project-lvl4",
     "type": "project",
     "description": "Мой 4й проект task-manager на hexlet.",
     "keywords": [
