--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "spatie/laravel-query-builder": "^3.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
+        "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.5",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
