--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
+        "laravelcollective/html": "^6.2",
         "spatie/laravel-query-builder": "^3.3"
     },
     "require-dev": {
