--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=log
+MAIL_MAILER=log
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
