--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@rails/ujs": "^6.1.0"
     }
 }
